[package]
name = "drivesync"
version = "0.1.0"
edition = "2021"
authors = ["semtexzv@gmail.com"]
description = "Tool for manually syncing data to google drive over slow networks"
license = "GPL-2.0"


[dependencies]
argh = "0.1.8"

anyhow = "1.0.63"
async-trait = "0.1.57"
async-fn-stream = "0.2.0"
directories = "4.0.1"
futures = "0.3.24"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
google-drive3 = "4.0.1"
mime = "0.3.16"
serde = "^1.0"
serde_json = "^1.0"
hyper = "0.14.20"
hyper-rustls = "0.23.0"
indicatif = "0.17.0"

tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tracing-log = "0.1.3"